--- a/rails/locale/en.yml
+++ b/rails/locale/en.yml
@@ -1,92 +1,510 @@
 en:
   languages:
-    an: "𐐈𐑉𐐲𐑀𐐱𐑌𐐨𐑆"
-    apa: "𐐊𐐹𐐰𐐽𐐨 𐐢𐐩𐑍𐐶𐐮𐐾"
-    ar: "𐐇𐑉𐐲𐐺𐐮𐐿"
-    art: "𐐂𐑉𐐻𐐮𐑁𐐮𐑇𐐲𐑊 𐐢𐐩𐑍𐐶𐐮𐐾"
-    bat: "𐐒𐐪𐑊𐐻𐐮𐐿 𐐢𐐩𐑍𐐶𐐮𐐾"
-    ber: "𐐒𐐲𐑉𐐺𐐲𐑉"
-    bnt: "𐐒𐐰𐑌𐐻𐐭"
-    br: "𐐒𐑉𐐯𐐻𐐲𐑌"
-    byn: "𐐒𐑊𐐮𐑌"
-    ca: "𐐗𐐪𐐻𐐲𐑊𐐪𐑌"
-    cel: "𐐗𐐯𐑊𐐻𐐮𐐿 𐐢𐐩𐑍𐐶𐐮𐐾"
-    chr: "𐐕𐐯𐑉𐐬𐐿𐐨"
-    chy: "𐐟𐐴𐐰𐑌"
-    co: "𐐗𐐬𐑉𐑅𐐮𐐿𐐲𐑌"
-    cop: "𐐗𐐬𐐹𐐻𐐮𐐿"
-    cpe: "𐐀𐑍𐑊𐐮𐑇-𐐺𐐩𐑅𐐻 𐐗𐑉𐐨𐐬𐑊 𐐬𐑉 𐐑𐐮𐐾𐐮𐑌"
-    cpf: "𐐙𐑉𐐯𐑌𐐽-𐐺𐐩𐑅𐐻 𐐗𐑉𐐨𐐬𐑊 𐐬𐑉 𐐑𐐮𐐾𐐮𐑌"
-    cr: "𐐗𐑉𐐨"
-    crp: "𐐗𐑉𐐨𐐬𐑊 𐐬𐑉 𐐑𐐮𐐾𐐮𐑌"
-    cs: "𐐕𐐯𐐿"
-    cy: "𐐎𐐯𐑊𐑇"
-    da: "𐐔𐐩𐑌𐐮𐑇"
-    dak: "𐐔𐐲𐐿𐐬𐐻𐐲"
-    de: "𐐖𐐲𐑉𐑋𐑌𐐲"
-    dsb: "𐐢𐐬𐐲𐑉 𐐝𐐬𐑉𐐺𐐨𐐲𐑌"
-    dum: "𐐣𐐮𐐼𐐲𐑊 𐐔𐐲𐐽"
-    egy: "𐐁𐑌𐐽𐐲𐑌𐐻 𐐀𐐾𐐮𐐹𐐽𐐲𐑌"
-    el: "𐐘𐑉𐐨𐐿"
-    en: "𐐀𐑍𐑊𐐮𐑇"
-    enm: "𐐣𐐮𐐼𐐲𐑊 𐐀𐑍𐑊𐐮𐑇"
-    eo: "𐐇𐑅𐐹𐐯𐑉𐐪𐑌𐐻𐐬"
-    es: "𐐝𐐹𐐰𐑌𐐮𐑇"
-    et: "𐐀𐑅𐐻𐐬𐑌𐐨𐐲𐑌"
-    eu: "𐐒𐐰𐑅𐐿"
-    fr: "𐐙𐑉𐐯𐑌𐐽"
-    frm: "𐐣𐐮𐐼𐐲𐑊 𐐙𐑉𐐯𐑌𐐽"
-    ga: "𐐌𐑉𐐮𐑇"
-    gem: "𐐖𐐲𐑉𐑋𐐰𐑌𐐮𐐿 𐐢𐐩𐑍𐐶𐐮𐐾"
-    gil: "𐐘𐐮𐑊𐐺𐐯𐑉𐐻𐐨𐑆"
-    gmh: "𐐣𐐮𐐼𐐲𐑊 𐐐𐐴 𐐖𐐲𐑉𐑋𐐲𐑌"
-    got: "𐐘𐐱𐑃𐐮𐐿"
-    grc: "𐐁𐑌𐐽𐐲𐑌𐐻 𐐘𐑉𐐨𐐿"
-    gv: "𐐣𐐰𐑌𐐿𐑅"
-    haw: "𐐐𐐲𐐶𐐴𐐲𐑌"
-    hi: "𐐐𐐮𐑌𐐼𐐨"
-    hit: "𐐐𐐮𐐻𐐴𐐻"
-    hr: "𐐗𐑉𐐬𐐩𐑇𐐲𐑌"
-    ht: "𐐐𐐩𐑇𐐲𐑌"
-    hy: "𐐂𐑉𐑋𐐨𐑌𐐨𐐲𐑌"
-    ia: "𐐆𐑌𐐻𐐲𐑉𐑊𐐮𐑍𐐶𐐲"
-    id: "𐐆𐑌𐐼𐐬𐑌𐐨𐑈𐐲𐑌"
-    inc: "𐐆𐑌𐐼𐐮𐐿 𐐢𐐩𐑍𐐶𐐮𐐾"
-    ine: "𐐆𐑌𐐼𐐬-𐐏𐐯𐑉𐐬𐐹𐐨𐐲𐑌 𐐢𐐩𐑍𐐶𐐮𐐾"
-    is: "𐐌𐑅𐑊𐐰𐑌𐐼𐐮𐐿"
-    it: "𐐆𐐻𐐰𐑊𐐷𐐲𐑌"
-    ja: "𐐖𐐰𐐹𐐲𐑌𐐨𐑆"
-    jpr: "𐐖𐐭𐐼𐐨𐐬-𐐑𐐯𐑉𐑈𐐲𐑌"
-    jrb: "𐐖𐐭𐐼𐐨𐐬-𐐈𐑉𐐲𐐺𐐮𐐿"
-    jv: "𐐖𐐪𐑂𐐲𐑌𐐨𐑆"
-    ka: "𐐖𐐬𐑉𐐾𐐲𐑌"
-    km: "𐐗𐐲𐑋𐐯𐑉"
-    ko: "𐐗𐐬𐑉𐐨𐐲𐑌"
-    ku: "𐐗𐐲𐑉𐐼𐐮𐑇"
-    kut: "𐐢𐐰𐐼𐐨𐑌𐐬"
-    kw: "𐐗𐐬𐑉𐑌𐐮𐑇"
-    la: "𐐢𐐰𐐻𐐮𐑌"
-    lb: "𐐢𐐲𐐿𐑅𐐯𐑋𐐺𐐲𐑉𐑀𐐮𐑇"
-    lo: "𐐢𐐵"
-    lv: "𐐢𐐰𐐻𐑂𐐨𐐲𐑌"
-    mga: "𐐣𐐮𐐼𐐲𐑊 𐐌𐑉𐐮𐑇"
-    mi: "𐐣𐐵𐑉𐐨"
-    mis: "𐐣𐐮𐑅𐐲𐑊𐐩𐑌𐐨𐐲𐑅 𐐢𐐩𐑍𐐶𐐮𐐾"
-    mk: "𐐣𐐰𐑅𐐯𐐼𐐬𐑌𐐨𐐲𐑌"
-    mn: "𐐣𐐱𐑍𐐬𐑊𐐨𐐲𐑌"
-    mnc: "𐐣𐐰𐑌𐐽𐐭"
-    mo: "𐐣𐐬𐑊𐐼𐐩𐑂𐐨𐐲𐑌"
-    moh: "𐐐𐐬𐐸𐐪𐐿"
-    mul: "𐐣𐐲𐑊𐐻𐐮𐐹𐐲𐑊 𐐢𐐩𐑍𐐶𐐮𐐾𐐲𐑆"
-    mus: "𐐗𐑉𐐨𐐿"
-    my: "𐐒𐐲𐑉𐑋𐐨𐑆"
-    myn: "𐐣𐐴𐐲𐑌 𐐢𐐩𐑍𐐶𐐮𐐾"
-    nai: "𐐤𐐬𐑉𐑃 𐐊𐑋𐐯𐑉𐐮𐐿𐐲𐑌 𐐆𐑌𐐼𐐨𐐲𐑌 𐐢𐐩𐑍𐐶𐐮𐐾"
-    nap: "𐐤𐐨𐐲𐐹𐐱𐑊𐐮𐐻𐐲𐑌"
-    nds: "𐐢𐐬 𐐖𐐯𐑉𐑋𐐲𐑌"
-    nl: "𐐔𐐲𐐽"
-    nv: "𐐤𐐪𐑂𐐲𐐸𐐬"
-    tlh: "𐐗𐑊𐐮𐑍𐐱𐑌"
-    zbl: "𐐒𐑊𐐮𐑅-𐑅𐐮𐑋𐐺𐐲𐑊𐑆"
-    zh: "𐐕𐐴𐑌𐐨𐑆"
-    zxx: "𐐤𐐬 𐑊𐐨𐑍𐐶𐐮𐑅𐐻𐐮𐐿 𐐿𐐱𐑌𐐻𐐯𐑌𐐻"
+    aa: "Afar"
+    ab: "Abkhazian"
+    ace: "Achinese"
+    ach: "Acoli"
+    ada: "Adangme"
+    ady: "Adyghe"
+    ae: "Avestan"
+    af: "Afrikaans"
+    afa: "Afro-Asiatic Language"
+    afh: "Afrihili"
+    ain: "Ainu"
+    ak: "Akan"
+    akk: "Akkadian"
+    ale: "Aleut"
+    alg: "Algonquian Language"
+    alt: "Southern Altai"
+    am: "Amharic"
+    an: "Aragonese"
+    ang: "Old English"
+    anp: "Angika"
+    apa: "Apache Language"
+    ar: "Arabic"
+    arc: "Aramaic"
+    arn: "Araucanian"
+    arp: "Arapaho"
+    art: "Artificial Language"
+    arw: "Arawak"
+    as: "Assamese"
+    ast: "Asturian"
+    ath: "Athapascan Language"
+    aus: "Australian Language"
+    av: "Avaric"
+    awa: "Awadhi"
+    ay: "Aymara"
+    az: "Azerbaijani"
+    ba: "Bashkir"
+    bad: "Banda"
+    bai: "Bamileke Language"
+    bal: "Baluchi"
+    ban: "Balinese"
+    bas: "Basa"
+    bat: "Baltic Language"
+    be: "Belarusian"
+    bej: "Beja"
+    bem: "Bemba"
+    ber: "Berber"
+    bg: "Bulgarian"
+    bh: "Bihari"
+    bho: "Bhojpuri"
+    bi: "Bislama"
+    bik: "Bikol"
+    bin: "Bini"
+    bla: "Siksika"
+    bm: "Bambara"
+    bn: "Bengali"
+    bnt: "Bantu"
+    bo: "Tibetan"
+    br: "Breton"
+    bra: "Braj"
+    bs: "Bosnian"
+    btk: "Batak"
+    bua: "Buriat"
+    bug: "Buginese"
+    byn: "Blin"
+    ca: "Catalan"
+    cad: "Caddo"
+    cai: "Central American Indian Language"
+    car: "Carib"
+    cau: "Caucasian Language"
+    cch: "Atsam"
+    ce: "Chechen"
+    ceb: "Cebuano"
+    cel: "Celtic Language"
+    ch: "Chamorro"
+    chb: "Chibcha"
+    chg: "Chagatai"
+    chk: "Chuukese"
+    chm: "Mari"
+    chn: "Chinook Jargon"
+    cho: "Choctaw"
+    chp: "Chipewyan"
+    chr: "Cherokee"
+    chy: "Cheyenne"
+    cmc: "Chamic Language"
+    co: "Corsican"
+    cop: "Coptic"
+    cpe: "English-based Creole or Pidgin"
+    cpf: "French-based Creole or Pidgin"
+    cpp: "Portuguese-based Creole or Pidgin"
+    cr: "Cree"
+    crh: "Crimean Turkish"
+    crp: "Creole or Pidgin"
+    cs: "Czech"
+    csb: "Kashubian"
+    cu: "Church Slavic"
+    cus: "Cushitic Language"
+    cv: "Chuvash"
+    cy: "Welsh"
+    da: "Danish"
+    dak: "Dakota"
+    dar: "Dargwa"
+    day: "Dayak"
+    de: "German"
+    de_AT: "Austrian German"
+    de_CH: "Swiss High German"
+    del: "Delaware"
+    den: "Slave"
+    dgr: "Dogrib"
+    din: "Dinka"
+    doi: "Dogri"
+    dra: "Dravidian Language"
+    dsb: "Lower Sorbian"
+    dua: "Duala"
+    dum: "Middle Dutch"
+    dv: "Divehi"
+    dyu: "Dyula"
+    dz: "Dzongkha"
+    ee: "Ewe"
+    efi: "Efik"
+    egy: "Ancient Egyptian"
+    eka: "Ekajuk"
+    el: "Greek"
+    elx: "Elamite"
+    en: "English"
+    en_AU: "Australian English"
+    en_CA: "Canadian English"
+    en_GB: "British English"
+    en_US: "U.S. English"
+    enm: "Middle English"
+    eo: "Esperanto"
+    es: "Spanish"
+    es_419: "Latin American Spanish"
+    es_ES: "Iberian Spanish"
+    et: "Estonian"
+    eu: "Basque"
+    ewo: "Ewondo"
+    fa: "Persian"
+    fan: "Fang"
+    fat: "Fanti"
+    ff: "Fulah"
+    fi: "Finnish"
+    fil: "Filipino"
+    fiu: "Finno-Ugrian Language"
+    fj: "Fijian"
+    fo: "Faroese"
+    fon: "Fon"
+    fr: "French"
+    fr_CA: "Canadian French"
+    fr_CH: "Swiss French"
+    frm: "Middle French"
+    fro: "Old French"
+    frr: "Northern Frisian"
+    frs: "Eastern Frisian"
+    fur: "Friulian"
+    fy: "Western Frisian"
+    ga: "Irish"
+    gaa: "Ga"
+    gay: "Gayo"
+    gba: "Gbaya"
+    gd: "Scottish Gaelic"
+    gem: "Germanic Language"
+    gez: "Geez"
+    gil: "Gilbertese"
+    gl: "Galician"
+    gmh: "Middle High German"
+    gn: "Guarani"
+    goh: "Old High German"
+    gon: "Gondi"
+    gor: "Gorontalo"
+    got: "Gothic"
+    grb: "Grebo"
+    grc: "Ancient Greek"
+    gsw: "Swiss German"
+    gu: "Gujarati"
+    gv: "Manx"
+    gwi: "Gwichʼin"
+    ha: "Hausa"
+    hai: "Haida"
+    haw: "Hawaiian"
+    he: "Hebrew"
+    hi: "Hindi"
+    hil: "Hiligaynon"
+    him: "Himachali"
+    hit: "Hittite"
+    hmn: "Hmong"
+    ho: "Hiri Motu"
+    hr: "Croatian"
+    hsb: "Upper Sorbian"
+    ht: "Haitian"
+    hu: "Hungarian"
+    hup: "Hupa"
+    hy: "Armenian"
+    hz: "Herero"
+    ia: "Interlingua"
+    iba: "Iban"
+    id: "Indonesian"
+    ie: "Interlingue"
+    ig: "Igbo"
+    ii: "Sichuan Yi"
+    ijo: "Ijo"
+    ik: "Inupiaq"
+    ilo: "Iloko"
+    inc: "Indic Language"
+    ine: "Indo-European Language"
+    inh: "Ingush"
+    io: "Ido"
+    ira: "Iranian Language"
+    iro: "Iroquoian Language"
+    is: "Icelandic"
+    it: "Italian"
+    iu: "Inuktitut"
+    ja: "Japanese"
+    jbo: "Lojban"
+    jpr: "Judeo-Persian"
+    jrb: "Judeo-Arabic"
+    jv: "Javanese"
+    ka: "Georgian"
+    kaa: "Kara-Kalpak"
+    kab: "Kabyle"
+    kac: "Kachin"
+    kaj: "Jju"
+    kam: "Kamba"
+    kar: "Karen"
+    kaw: "Kawi"
+    kbd: "Kabardian"
+    kcg: "Tyap"
+    kfo: "Koro"
+    kg: "Kongo"
+    kha: "Khasi"
+    khi: "Khoisan Language"
+    kho: "Khotanese"
+    ki: "Kikuyu"
+    kj: "Kuanyama"
+    kk: "Kazakh"
+    kl: "Kalaallisut"
+    km: "Khmer"
+    kmb: "Kimbundu"
+    kn: "Kannada"
+    ko: "Korean"
+    kok: "Konkani"
+    kos: "Kosraean"
+    kpe: "Kpelle"
+    kr: "Kanuri"
+    krc: "Karachay-Balkar"
+    krl: "Karelian"
+    kro: "Kru"
+    kru: "Kurukh"
+    ks: "Kashmiri"
+    ku: "Kurdish"
+    kum: "Kumyk"
+    kut: "Kutenai"
+    kv: "Komi"
+    kw: "Cornish"
+    ky: "Kirghiz"
+    la: "Latin"
+    lad: "Ladino"
+    lah: "Lahnda"
+    lam: "Lamba"
+    lb: "Luxembourgish"
+    lez: "Lezghian"
+    lg: "Ganda"
+    li: "Limburgish"
+    ln: "Lingala"
+    lo: "Lao"
+    lol: "Mongo"
+    loz: "Lozi"
+    lt: "Lithuanian"
+    lu: "Luba-Katanga"
+    lua: "Luba-Lulua"
+    lui: "Luiseno"
+    lun: "Lunda"
+    luo: "Luo"
+    lus: "Lushai"
+    lv: "Latvian"
+    mad: "Madurese"
+    mag: "Magahi"
+    mai: "Maithili"
+    mak: "Makasar"
+    man: "Mandingo"
+    map: "Austronesian Language"
+    mas: "Masai"
+    mdf: "Moksha"
+    mdr: "Mandar"
+    men: "Mende"
+    mfe: "Morisyen"
+    mg: "Malagasy"
+    mga: "Middle Irish"
+    mh: "Marshallese"
+    mi: "Maori"
+    mic: "Micmac"
+    min: "Minangkabau"
+    mis: "Miscellaneous Language"
+    mk: "Macedonian"
+    mkh: "Mon-Khmer Language"
+    ml: "Malayalam"
+    mn: "Mongolian"
+    mnc: "Manchu"
+    mni: "Manipuri"
+    mno: "Manobo Language"
+    mo: "Moldavian"
+    moh: "Mohawk"
+    mos: "Mossi"
+    mr: "Marathi"
+    ms: "Malay"
+    mt: "Maltese"
+    mul: "Multiple Languages"
+    mun: "Munda Language"
+    mus: "Creek"
+    mwl: "Mirandese"
+    mwr: "Marwari"
+    my: "Burmese"
+    myn: "Mayan Language"
+    myv: "Erzya"
+    na: "Nauru"
+    nah: "Nahuatl"
+    nai: "North American Indian Language"
+    nap: "Neapolitan"
+    nb: "Norwegian Bokmål"
+    nd: "North Ndebele"
+    nds: "Low German"
+    ne: "Nepali"
+    new: "Newari"
+    ng: "Ndonga"
+    nia: "Nias"
+    nic: "Niger-Kordofanian Language"
+    niu: "Niuean"
+    nl: "Dutch"
+    nl_BE: "Flemish"
+    nn: "Norwegian Nynorsk"
+    no: "Norwegian"
+    nog: "Nogai"
+    non: "Old Norse"
+    nqo: "N’Ko"
+    nr: "South Ndebele"
+    nso: "Northern Sotho"
+    nub: "Nubian Language"
+    nv: "Navajo"
+    nwc: "Classical Newari"
+    ny: "Nyanja"
+    nym: "Nyamwezi"
+    nyn: "Nyankole"
+    nyo: "Nyoro"
+    nzi: "Nzima"
+    oc: "Occitan"
+    oj: "Ojibwa"
+    om: "Oromo"
+    or: "Oriya"
+    os: "Ossetic"
+    osa: "Osage"
+    ota: "Ottoman Turkish"
+    oto: "Otomian Language"
+    pa: "Punjabi"
+    paa: "Papuan Language"
+    pag: "Pangasinan"
+    pal: "Pahlavi"
+    pam: "Pampanga"
+    pap: "Papiamento"
+    pau: "Palauan"
+    peo: "Old Persian"
+    phi: "Philippine Language"
+    phn: "Phoenician"
+    pi: "Pali"
+    pl: "Polish"
+    pon: "Pohnpeian"
+    pra: "Prakrit Language"
+    pro: "Old Provençal"
+    ps: "Pashto"
+    pt: "Portuguese"
+    pt_BR: "Brazilian Portuguese"
+    pt_PT: "Iberian Portuguese"
+    qu: "Quechua"
+    raj: "Rajasthani"
+    rap: "Rapanui"
+    rar: "Rarotongan"
+    rm: "Rhaeto-Romance"
+    rn: "Rundi"
+    ro: "Romanian"
+    roa: "Romance Language"
+    rom: "Romany"
+    root: "Root"
+    ru: "Russian"
+    rup: "Aromanian"
+    rw: "Kinyarwanda"
+    sa: "Sanskrit"
+    sad: "Sandawe"
+    sah: "Yakut"
+    sai: "South American Indian Language"
+    sal: "Salishan Language"
+    sam: "Samaritan Aramaic"
+    sas: "Sasak"
+    sat: "Santali"
+    sc: "Sardinian"
+    scn: "Sicilian"
+    sco: "Scots"
+    sd: "Sindhi"
+    se: "Northern Sami"
+    sel: "Selkup"
+    sem: "Semitic Language"
+    sg: "Sango"
+    sga: "Old Irish"
+    sgn: "Sign Language"
+    sh: "Serbo-Croatian"
+    shn: "Shan"
+    si: "Sinhala"
+    sid: "Sidamo"
+    sio: "Siouan Language"
+    sit: "Sino-Tibetan Language"
+    sk: "Slovak"
+    sl: "Slovenian"
+    sla: "Slavic Language"
+    sm: "Samoan"
+    sma: "Southern Sami"
+    smi: "Sami Language"
+    smj: "Lule Sami"
+    smn: "Inari Sami"
+    sms: "Skolt Sami"
+    sn: "Shona"
+    snk: "Soninke"
+    so: "Somali"
+    sog: "Sogdien"
+    son: "Songhai"
+    sq: "Albanian"
+    sr: "Serbian"
+    srn: "Sranan Tongo"
+    srr: "Serer"
+    ss: "Swati"
+    ssa: "Nilo-Saharan Language"
+    st: "Southern Sotho"
+    su: "Sundanese"
+    suk: "Sukuma"
+    sus: "Susu"
+    sux: "Sumerian"
+    sv: "Swedish"
+    sw: "Swahili"
+    syc: "Classical Syriac"
+    syr: "Syriac"
+    ta: "Tamil"
+    tai: "Tai Language"
+    te: "Telugu"
+    tem: "Timne"
+    ter: "Tereno"
+    tet: "Tetum"
+    tg: "Tajik"
+    th: "Thai"
+    ti: "Tigrinya"
+    tig: "Tigre"
+    tiv: "Tiv"
+    tk: "Turkmen"
+    tkl: "Tokelau"
+    tl: "Tagalog"
+    tlh: "Klingon"
+    tli: "Tlingit"
+    tmh: "Tamashek"
+    tn: "Tswana"
+    to: "Tonga"
+    tog: "Nyasa Tonga"
+    tpi: "Tok Pisin"
+    tr: "Turkish"
+    trv: "Taroko"
+    ts: "Tsonga"
+    tsi: "Tsimshian"
+    tt: "Tatar"
+    tum: "Tumbuka"
+    tup: "Tupi Language"
+    tut: "Altaic Language"
+    tvl: "Tuvalu"
+    tw: "Twi"
+    ty: "Tahitian"
+    tyv: "Tuvinian"
+    udm: "Udmurt"
+    ug: "Uighur"
+    uga: "Ugaritic"
+    uk: "Ukrainian"
+    umb: "Umbundu"
+    und: "Unknown or Invalid Language"
+    ur: "Urdu"
+    uz: "Uzbek"
+    vai: "Vai"
+    ve: "Venda"
+    vi: "Vietnamese"
+    vo: "Volapük"
+    vot: "Votic"
+    wa: "Walloon"
+    wak: "Wakashan Language"
+    wal: "Walamo"
+    war: "Waray"
+    was: "Washo"
+    wen: "Sorbian Language"
+    wo: "Wolof"
+    xal: "Kalmyk"
+    xh: "Xhosa"
+    yao: "Yao"
+    yap: "Yapese"
+    yi: "Yiddish"
+    yo: "Yoruba"
+    ypk: "Yupik Language"
+    za: "Zhuang"
+    zap: "Zapotec"
+    zbl: "Blissymbols"
+    zen: "Zenaga"
+    zh: "Chinese"
+    zh_Hans: "Simplified Chinese"
+    zh_Hant: "Traditional Chinese"
+    znd: "Zande"
+    zu: "Zulu"
+    zun: "Zuni"
+    zxx: "No linguistic content"
+    zza: "Zaza"
