--- a/rails/locale/zh.yml
+++ b/rails/locale/zh.yml
@@ -1,409 +1,506 @@
 zh:
   languages:
-    ab: "阿布哈茲文"
-    ace: "亞齊文"
-    ach: "阿僑利文"
-    ada: "阿當莫文"
-    ady: "阿迪各文"
-    ae: "阿緯斯陀文"
-    af: "南非荷蘭文"
-    afa: "亞非諸語言"
-    ain: "愛努文"
-    ak: "阿坎文"
+    aa: "阿法文"
+    ab: "阿布哈西亚文"
+    ace: "亚齐文"
+    ach: "阿乔利文"
+    ada: "阿当梅文"
+    ady: "阿迪何文"
+    ae: "阿维斯塔文"
+    af: "南非荷兰文"
+    afa: "其他亚非语系"
+    afh: "阿弗里希利文"
+    ain: "阿伊努文"
+    ak: "阿肯文"
+    akk: "阿卡德文"
     ale: "阿留申文"
-    alg: "阿爾岡昆諸語言"
-    alt: "南阿爾泰文"
-    an: "阿拉貢文"
+    alg: "其他阿尔贡语系"
+    alt: "南阿尔泰文"
+    am: "阿姆哈拉文"
+    an: "阿拉贡文"
     ang: "古英文"
-    apa: "阿帕切諸語言"
-    arn: "阿勞坎文"
-    art: "人工語言"
-    as: "阿薩姆文"
-    ast: "阿斯圖里亞文"
-    ath: "阿薩帕斯坎諸語言"
-    aus: "澳洲諸語言"
-    av: "阿瓦爾文"
-    awa: "阿瓦文"
-    ay: "艾馬拉文"
-    az: "亞塞拜然文"
-    ba: "巴什客爾文"
-    bad: "班達文"
-    bai: "巴米累克諸語言"
-    ban: "峇里文"
-    bas: "巴薩文"
-    bat: "波羅的海諸語言"
-    be: "白俄羅斯文"
-    bej: "貝扎文"
-    bem: "別姆巴文"
-    ber: "柏柏爾文"
-    bg: "保加利亞文"
-    bh: "比哈爾文"
-    bho: "博傑普爾文"
-    bi: "比斯拉馬文"
-    bik: "比科爾文"
-    bla: "錫克錫卡文"
-    bnt: "班圖諸語言"
+    anp: "昂加语"
+    apa: "阿帕切文"
+    ar: "阿拉伯文"
+    arc: "阿拉米文"
+    arn: "阿劳坎文"
+    arp: "阿拉帕霍文"
+    art: "其他人工语系"
+    arw: "阿拉瓦克文"
+    as: "阿萨姆文"
+    ast: "阿斯图里亚思特文"
+    ath: "阿萨帕斯坎语系"
+    aus: "澳大利亚语系"
+    av: "阿瓦尔文"
+    awa: "阿瓦乔文"
+    ay: "艾马拉文"
+    az: "阿塞拜疆文"
+    ba: "巴什客尔文"
+    bad: "班达文"
+    bai: "巴米累克语系"
+    bal: "俾路支文"
+    ban: "巴里文"
+    bas: "巴萨文"
+    bat: "其他波罗的语系"
+    be: "白俄罗斯文"
+    bej: "别札文"
+    bem: "别姆巴文"
+    ber: "柏柏尔文"
+    bg: "保加利亚文"
+    bh: "比哈尔文"
+    bho: "博杰普尔文"
+    bi: "比斯拉马文"
+    bik: "毕库尔文"
+    bin: "比尼文"
+    bla: "司克司卡文"
+    bm: "班巴拉文"
+    bn: "孟加拉文"
+    bnt: "班图文"
     bo: "藏文"
-    bs: "波士尼亞文"
-    bua: "布里阿特文"
-    bug: "布吉斯文"
-    byn: "比林文"
-    ca: "加泰羅尼亞文"
-    cai: "中美印第安諸語言"
-    car: "加勒比文"
-    cau: "高加索諸語言"
-    cch: "阿燦文"
-    ce: "車臣文"
-    ceb: "宿霧文"
-    cel: "凱爾特諸語言"
-    ch: "查莫洛文"
-    chb: "奇布查文"
-    chk: "處奇斯文"
-    chm: "馬里文"
-    chn: "契奴克文"
-    cho: "喬克托文"
-    chp: "奇佩瓦揚文"
-    chr: "柴羅基文"
-    chy: "沙伊安文"
-    cmc: "佔語諸語言"
-    cpe: "歐洲腔調和洋涇濱，源自英文的(其他)"
-    cpf: "歐洲腔調和洋涇濱，源自法文的(其他)"
-    cpp: "歐洲腔調和洋涇濱，源自葡萄牙文的(其他)"
-    cr: "克裡文"
-    crh: "克里米亞半島的土耳其文；克里米亞半島的塔塔爾文"
-    crp: "克里奧爾文和皮欽文"
-    csb: "卡舒布文"
-    cus: "庫施特諸語言"
-    cy: "威爾斯文"
-    da: "丹麥文"
-    dak: "達科他文"
-    dar: "達爾格瓦文"
-    day: "迪雅克文"
-    de_AT: "德文 (奧地利)"
-    del: "德拉瓦文"
-    den: "斯拉夫"
+    br: "布里多尼文"
+    bra: "布拉杰文"
+    bs: "波斯尼亚文"
+    btk: "巴塔克文"
+    bua: "布里亚特文"
+    bug: "布吉文"
+    byn: "布林文"
+    ca: "加泰罗尼亚文"
+    cad: "卡多文"
+    cai: "其他中美印第安语系"
+    car: "巴勒比文"
+    cau: "其他高加索语系"
+    cch: "cch"
+    ce: "车臣文"
+    ceb: "宿务文"
+    cel: "其他凯尔特语系"
+    ch: "查莫罗文"
+    chb: "契布卡文"
+    chg: "查加文"
+    chk: "楚吾克文"
+    chm: "马里文"
+    chn: "契努克文"
+    cho: "乔克托文"
+    chp: "佩瓦扬文"
+    chr: "彻罗基文"
+    chy: "夏延文"
+    cmc: "查米克文"
+    co: "科西嘉文"
+    cop: "科普特文"
+    cpe: "其他以英文为基础的克里奥尔混合语系"
+    cpf: "其他以法文为基础的克里奥尔混合语系"
+    cpp: "其他以葡萄牙文为基础的克里奥尔混合语系"
+    cr: "克里族文"
+    crh: "克里米亚土耳其文；克里米亚塔塔文"
+    crp: "其他克里奥尔混合语系"
+    cs: "捷克文"
+    csb: "卡舒文"
+    cu: "宗教斯拉夫文"
+    cus: "其他库施特语系"
+    cv: "楚瓦什文"
+    cy: "威尔士文"
+    da: "丹麦文"
+    dak: "达科他文"
+    dar: "达尔格瓦文"
+    day: "达雅克文"
+    de: "德文"
+    de_AT: "奥地利德语"
+    de_CH: "高地德文 (瑞士)"
+    del: "特拉华文"
+    den: "司雷夫文"
     dgr: "多格里布文"
-    doi: "多格來文"
-    dra: "德拉威諸語言"
+    din: "丁卡文"
+    doi: "多格拉文"
+    dra: "其他德拉维语系"
     dsb: "下索布文"
-    dua: "杜亞拉文"
-    dum: "中古荷蘭文"
-    dv: "迪維西文"
-    ee: "埃維文"
+    dua: "都阿拉文"
+    dum: "中古荷兰文"
+    dv: "迪维希文"
+    dyu: "迪尤拉文"
+    dz: "不丹文"
+    ee: "埃维文"
     efi: "埃菲克文"
     egy: "古埃及文"
-    eka: "艾卡朱克文"
-    el: "希臘文"
-    elx: "埃蘭文"
-    en_AU: "英文 (澳洲)"
-    en_GB: "英文 (英國)"
-    en_US: "英文 (美國)"
-    eo: "世界語"
-    es_419: "西班牙文 (拉丁美洲)"
-    es_ES: "西班牙文 (西班牙)"
-    et: "愛沙尼亞文"
-    ewo: "依汪都文"
-    fan: "芳族文"
-    ff: "富拉文"
-    fi: "芬蘭文"
-    fil: "菲律賓文"
-    fiu: "芬烏諸語言"
-    fj: "斐濟文"
-    fo: "法羅文"
-    fon: "豐文"
-    fr_CH: "法文 (瑞士)"
-    frr: "北弗里西亞文"
-    frs: "東弗里西亞文"
-    fy: "西弗里西亞文"
-    ga: "愛爾蘭文"
-    gaa: "加族文"
-    gay: "加約文"
-    gba: "葛巴亞文"
-    gd: "蘇格蘭 - 蓋爾文"
-    gem: "日耳曼諸語言"
-    gez: "吉茲文"
-    gil: "吉爾伯特群島文"
-    gl: "加里西亞文"
-    gmh: "中古高地日耳曼文"
-    goh: "古高地日耳曼文"
-    gon: "岡德文"
-    gor: "科隆達羅文"
-    got: "哥德文"
-    grc: "古希臘文"
-    gu: "吉亞拉塔文"
-    gv: "曼島文"
-    gwi: "圭契文"
-    hai: "海達文"
-    he: "希伯來文"
-    hi: "北印度文"
-    hil: "希利蓋農文"
-    him: "赫馬查利文"
+    eka: "埃克丘克文"
+    el: "希腊文"
+    elx: "艾拉米特文"
+    en: "英文"
+    en_AU: "英语（澳大利亚）"
+    en_CA: "加拿大英语"
+    en_GB: "英语（英国）"
+    en_US: "英语（美国）"
+    enm: "中古英文"
+    eo: "世界文"
+    es: "西班牙文"
+    es_419: "拉丁美洲西班牙语"
+    es_ES: "西班牙语（伊比利亚）"
+    et: "爱沙尼亚文"
+    eu: "巴斯克文"
+    ewo: "旺杜文"
+    fa: "波斯文"
+    fan: "芳格文"
+    fat: "芳蒂文"
+    ff: "夫拉文"
+    fi: "芬兰文"
+    fil: "菲律宾文"
+    fiu: "其他芬兰乌戈尔语系"
+    fj: "斐济文"
+    fo: "法罗文"
+    fon: "丰文"
+    fr: "法文"
+    fr_CA: "加拿大法语"
+    fr_CH: "瑞士法语"
+    frm: "中古法文"
+    fro: "古法文"
+    frr: "北弗里西亚语"
+    frs: "东弗里西亚文"
+    fur: "弗留利文"
+    fy: "弗里斯兰文"
+    ga: "爱尔兰文"
+    gaa: "加文"
+    gay: "迦约文"
+    gba: "葛巴亚文"
+    gd: "苏格兰盖尔文"
+    gem: "其他日尔曼语系"
+    gez: "吉兹文"
+    gil: "吉尔伯特斯文"
+    gl: "加利西亚文"
+    gmh: "中古高地德文"
+    gn: "瓜拉尼文"
+    goh: "古高地德文"
+    gon: "岗德文"
+    gor: "科洛涅达罗文"
+    got: "哥特文"
+    grb: "格列博文"
+    grc: "古希腊文"
+    gsw: "瑞士德文"
+    gu: "古加拉提文"
+    gv: "马恩岛文"
+    gwi: "吉维克琴文"
+    ha: "豪撒文"
+    hai: "海达文"
+    haw: "夏威夷文"
+    he: "希伯来文"
+    hi: "印地文"
+    hil: "希利盖农文"
+    him: "赫马查利文"
     hit: "赫梯文"
-    hmn: "孟文"
-    ho: "西里莫圖土文"
-    hr: "克羅埃西亞文"
+    hmn: "赫蒙文"
+    ho: "希里莫图文"
+    hr: "克罗地亚文"
+    hsb: "上索布文"
     ht: "海地文"
-    hy: "亞美尼亞文"
-    hz: "赫雷羅文"
-    ia: "國際文A"
-    id: "印尼文"
-    ie: "國際文E"
-    ig: "伊布文"
-    ii: "四川彝文"
-    ijo: "伊喬文"
-    ik: "依奴皮維克文"
-    ilo: "伊洛闊文"
-    inc: "印度諸語言"
-    ine: "印歐諸語言"
-    io: "伊朗文"
-    ira: "伊朗諸語言"
-    iro: "易洛魁文"
-    is: "冰島文"
-    it: "義大利文"
-    iu: "因紐特文"
-    jbo: "邏輯文"
-    jpr: "猶太教-波斯文"
-    jrb: "猶太阿拉伯文"
-    ka: "喬治亞文"
-    kaa: "卡拉卡爾帕克文"
-    kab: "卡比爾文"
-    kar: "克倫文"
-    kbd: "卡巴爾達文"
-    kfo: "科羅文"
-    kg: "剛果文"
-    khi: "科依桑諸語言"
-    kho: "和闐文"
-    ki: "吉庫尤文"
-    kj: "廣亞馬文"
-    kk: "哈薩克文"
-    kl: "格陵蘭文"
-    km: "高棉文"
-    kn: "坎那達文"
-    ko: "韓文"
-    kok: "貢根文"
-    kos: "科斯雷恩文"
-    kr: "卡努裡文"
-    krc: "卡拉柴-包爾卡爾文"
-    kro: "克魯文"
-    kru: "庫魯科文"
-    ks: "克什米爾文"
-    ku: "庫爾德文"
-    kum: "庫密克文"
-    kut: "庫特奈文"
-    kw: "康瓦耳文"
-    ky: "吉爾吉斯文"
-    lad: "拉迪諾文"
-    lah: "拉亨達文"
-    lam: "蘭巴文"
-    lb: "盧森堡文"
-    lez: "列茲干文"
-    lg: "干達文"
-    li: "林堡文"
-    lo: "寮國文"
+    hu: "匈牙利文"
+    hup: "胡帕文"
+    hy: "亚美尼亚文"
+    hz: "赫雷罗文"
+    ia: "国际语"
+    iba: "伊班文"
+    id: "印度尼西亚文"
+    ie: "国际语E"
+    ig: "伊格博文"
+    ii: "四川话"
+    ijo: "伊乔文"
+    ik: "依奴皮维克文"
+    ilo: "伊洛干诺文"
+    inc: "其他印度语系"
+    ine: "其他印欧语系"
+    inh: "印古什文"
+    io: "伊多文"
+    ira: "伊朗文"
+    iro: "伊洛魁语系"
+    is: "冰岛文"
+    it: "意大利文"
+    iu: "伊努伊特文"
+    ja: "日文"
+    jbo: "逻辑文"
+    jpr: "犹太波斯文"
+    jrb: "犹太阿拉伯文"
+    jv: "爪哇文"
+    ka: "格鲁吉亚文"
+    kaa: "卡拉卡尔帕克文"
+    kab: "卡比尔文"
+    kac: "卡琴文"
+    kaj: "kaj"
+    kam: "卡姆巴文"
+    kar: "喀伦文"
+    kaw: "卡威文"
+    kbd: "卡巴尔达文"
+    kcg: "kcg"
+    kfo: "科罗语"
+    kg: "刚果文"
+    kha: "卡西文"
+    khi: "其他科伊桑语系"
+    kho: "和田文"
+    ki: "吉库尤文"
+    kj: "宽亚玛文"
+    kk: "哈萨克文"
+    kl: "格陵兰文"
+    km: "柬埔寨文"
+    kmb: "金邦杜文"
+    kn: "坎纳达文"
+    ko: "韩文"
+    kok: "刚卡尼文"
+    kos: "科斯拉伊文"
+    kpe: "克佩列文"
+    kr: "卡努里文"
+    krc: "卡拉恰伊巴尔卡尔文"
+    krl: "卡累利阿文"
+    kro: "克鲁文"
+    kru: "库鲁克文"
+    ks: "克什米尔文"
+    ku: "库尔德文"
+    kum: "库梅克文"
+    kut: "库特内文"
+    kv: "科米文"
+    kw: "凯尔特文"
+    ky: "吉尔吉斯文"
+    la: "拉丁文"
+    lad: "拉迪诺文"
+    lah: "拉亨达文"
+    lam: "兰巴文"
+    lb: "卢森堡文"
+    lez: "莱兹依昂文"
+    lg: "卢干达文"
+    li: "淋布尔吉文"
+    ln: "林加拉文"
+    lo: "老挝文"
     lol: "芒戈文"
-    loz: "洛齊文"
-    lt: "立陶宛語"
-    lu: "魯巴加丹加文"
-    lua: "魯巴魯魯亞文"
-    lui: "路易塞諾文"
-    lun: "盧恩達文"
-    luo: "盧奧文"
-    lus: "盧晒文"
-    lv: "拉脫維亞文"
-    mad: "馬都拉文"
-    mag: "馬加伊文"
-    mai: "邁蒂利文"
-    mak: "望加錫文"
-    map: "南島諸語言"
-    mas: "馬賽文"
-    mdr: "曼達文"
-    men: "門德文"
-    mg: "馬爾加什文"
-    mga: "中古愛爾蘭文"
-    mh: "馬紹爾文"
-    mic: "米克馬克文"
-    min: "米南卡堡文"
-    mis: "混雜語諸語言"
-    mk: "馬其頓文"
-    mkh: "孟高棉諸語言"
-    ml: "馬來亞拉姆文"
-    mnc: "滿族文"
-    mni: "曼尼普裡文"
-    mno: "馬諾博諸語言"
-    mo: "摩爾多瓦文"
-    moh: "莫霍克文"
-    mr: "馬拉地文"
-    ms: "馬來文"
-    mt: "馬爾他文"
-    mul: "多種語言"
-    mun: "蒙達諸語言"
+    loz: "洛兹文"
+    lt: "立陶宛文"
+    lu: "鲁巴加丹加文"
+    lua: "鲁巴鲁瓦文"
+    lui: "路易塞诺文"
+    lun: "隆达文"
+    luo: "卢奥文"
+    lus: "卢晒文"
+    lv: "拉脱维亚文"
+    mad: "马都拉文"
+    mag: "马加伊文"
+    mai: "迈蒂利文"
+    mak: "望加锡文"
+    man: "曼丁哥文"
+    map: "澳斯特罗尼西亚语系"
+    mas: "萨伊语"
+    mdf: "莫克沙文"
+    mdr: "曼达尔"
+    men: "门迪文"
+    mg: "马尔加什文"
+    mga: "中古爱尔兰文"
+    mh: "马绍尔文"
+    mi: "毛利文"
+    mic: "米克马克文"
+    min: "米南卡保文"
+    mis: "各种不同语系"
+    mk: "马其顿文"
+    mkh: "其他孟高棉语系"
+    ml: "马来亚拉姆文"
+    mn: "蒙古文"
+    mnc: "满文"
+    mni: "曼尼普里文"
+    mno: "马诺博语系"
+    mo: "摩尔多瓦文"
+    moh: "摩霍克文"
+    mos: "莫西文"
+    mr: "马拉地文"
+    ms: "马来文"
+    mt: "马耳他文"
+    mul: "多种语系"
+    mun: "蒙达语系"
     mus: "克里克文"
-    mwl: "米蘭德斯文"
-    mwr: "馬爾尼裡文"
-    my: "緬甸文"
-    myn: "馬雅諸語言"
-    myv: "厄爾茲亞文"
-    na: "諾魯文"
-    nah: "納瓦特文"
-    nai: "北美印第安諸語言"
-    nb: "挪威波克默爾文"
-    nd: "北地畢列文"
-    nds: "低地日耳曼文；低地薩克遜文"
-    ne: "尼泊爾文"
-    new: "尼瓦爾文"
-    ng: "恩東加文"
-    nia: "尼亞斯文"
-    nic: "尼日爾科爾多凡諸語言"
-    niu: "紐埃文"
-    nl: "荷蘭文"
-    nl_BE: "法蘭德斯文"
-    nn: "新挪威文"
-    nog: "諾蓋文"
-    non: "古諾爾斯文"
-    nqo: "西非書面語言（N'ko）"
-    nr: "南地畢列文"
-    nub: "努比亞諸語言"
-    nv: "納瓦約文"
-    nwc: "古尼瓦爾文"
-    ny: "尼揚賈文"
-    nym: "尼揚韋齊文"
-    nyn: "尼揚科萊文"
-    nyo: "尼奧囉文"
-    nzi: "尼茲馬文"
-    oc: "奧克西坦文"
-    oj: "奧杰布瓦文"
-    om: "阿曼文"
-    or: "歐里亞文"
-    os: "奧塞提文"
-    osa: "歐塞奇文"
-    ota: "鄂圖曼土耳其文 (1500-1928)"
-    oto: "奧托米諸語言"
-    paa: "巴布亞諸語言"
-    pag: "潘加辛文"
-    pal: "巴列維文"
-    pam: "潘帕嘉文"
-    pap: "帕皮阿門托文"
-    pau: "帛琉文"
-    peo: "古波斯文 (ca.600-400 B.C.)"
-    phi: "菲律賓諸語言"
-    pl: "波蘭文"
-    pon: "波那貝文"
-    pra: "普拉克里特諸語言"
-    pro: "古普羅旺斯文"
-    ps: "普什圖文"
-    pt_PT: "葡萄牙文 (葡萄牙)"
-    qu: "蓋丘亞文"
-    raj: "拉賈斯坦諸文"
-    rap: "復活島文"
-    rar: "拉羅通加文"
-    rm: "里托羅曼斯文"
-    rn: "隆迪文"
-    ro: "羅馬尼亞文"
-    roa: "羅曼諸語言"
-    rom: "吉普賽文"
-    root: "根語言"
-    rup: "羅馬尼亞語系"
-    rw: "盧安達文"
-    sad: "桑達韋文"
-    sah: "雅庫特文"
-    sai: "南美印第安諸語言"
-    sal: "薩利什諸語言"
-    sam: "薩瑪利亞阿拉姆文"
-    sas: "撒撒克文"
-    sat: "散塔利文"
-    sc: "撒丁文"
-    sco: "蘇格蘭文"
-    sd: "印度語"
-    se: "北方薩米文"
-    sel: "瑟爾卡普文"
-    sem: "閃語諸語言"
-    sga: "古愛爾蘭文（至 900）"
-    sgn: "手語"
-    sh: "塞爾維亞克羅埃西亞文"
-    shn: "撣文"
-    si: "僧伽羅文"
-    sid: "希達摩文"
-    sio: "蘇語諸語言"
-    sit: "漢藏諸語言"
-    sl: "斯洛維尼亞文"
-    sla: "斯拉夫諸語言"
-    sm: "薩摩亞文"
-    sma: "南薩米文"
-    smi: "薩米諸語言"
-    smj: "魯勒薩米文"
-    smn: "伊納裡薩米文"
-    sms: "斯科特薩米文"
-    sn: "塞內加爾文"
-    so: "索馬利文"
-    sog: "索格底亞納文"
-    sq: "阿爾巴尼亞文"
-    sr: "塞爾維亞文"
-    srn: "蘇拉南東墎文"
-    srr: "塞雷爾文"
-    ssa: "尼羅撒哈拉諸語言"
-    su: "巽他語"
-    suk: "蘇庫馬文"
-    sus: "蘇蘇文"
-    sux: "蘇美文"
-    sw: "史瓦希里文"
-    syc: "古敘利亞文"
-    syr: "敘利亞文"
-    ta: "坦米爾文"
-    tai: "傣語諸語言"
-    te: "泰盧固文"
-    tem: "提姆文"
-    ter: "泰雷諾文"
-    tet: "泰頓文"
-    ti: "提格利尼亞文"
-    tig: "蒂格雷文"
-    tiv: "提夫文"
-    tk: "土庫曼文"
-    tkl: "托克勞文"
-    tl: "塔加路族文"
-    tlh: "克林貢文"
-    tli: "特林基特文"
-    tmh: "塔馬奇克文"
-    tn: "突尼西亞文"
-    to: "東加文"
-    tog: "湯加文(尼亞薩文)"
-    tpi: "托比辛文"
-    ts: "特松加文"
-    tsi: "欽西安文"
-    tt: "韃靼文"
-    tum: "圖姆布卡文"
-    tup: "圖皮諸語言"
-    tut: "阿爾泰諸語言（其他）"
-    tvl: "吐瓦魯文"
-    ty: "大溪地文"
-    tyv: "土凡文"
-    udm: "沃蒂艾克文"
-    ug: "維吾爾文"
-    uga: "烏加列文"
-    uk: "烏克蘭文"
-    umb: "姆本杜文"
-    und: "未確定的"
-    ur: "烏爾都文"
-    uz: "烏茲別克文"
-    vai: "越南文 Vai"
-    ve: "溫達文"
-    wak: "瓦卡什諸語言"
-    war: "瓦瑞文"
-    was: "瓦紹文"
-    wen: "索布諸語言"
-    wo: "沃爾夫文"
-    xal: "卡爾梅克文"
-    xh: "科薩文"
-    yao: "瑤文"
-    yi: "意第緒文"
-    yo: "約魯巴文"
-    ypk: "尤皮克諸語言"
-    za: "壯文"
-    zap: "薩波特克文"
-    zbl: "布列斯符號"
-    zen: "澤納加文"
-    zh_Hans: "簡體中文"
-    zh_Hant: "繁體中文"
-    znd: "贊德文"
-    zu: "祖魯文"
-    zun: "祖尼文"
-    zxx: "無語言內容"
+    mwl: "米兰德斯文"
+    mwr: "马尔瓦利文"
+    my: "缅甸文"
+    myn: "玛雅语系"
+    myv: "俄日亚文"
+    na: "瑙鲁文"
+    nah: "纳瓦特尔文"
+    nai: "其他北美印第安语系"
+    nap: "拿波里文"
+    nb: "挪威博克马尔文"
+    nd: "北恩德贝勒文"
+    nds: "低地德文；低地撒克逊文"
+    ne: "尼泊尔文"
+    new: "尼瓦尔文"
+    ng: "恩东加文"
+    nia: "尼亚斯文"
+    nic: "其他尼日尔科尔多凡语系"
+    niu: "纽埃文"
+    nl: "荷兰文"
+    nl_BE: "弗拉芒语"
+    nn: "挪威尼诺斯克文"
+    no: "挪威文"
+    nog: "诺盖文"
+    non: "古诺尔斯文"
+    nqo: "西非书面语言"
+    nr: "南部恩德贝勒文"
+    nso: "北索托文"
+    nub: "努比亚语系"
+    nv: "纳瓦霍文"
+    nwc: "尼瓦尔文 Classical Newari"
+    ny: "尼扬贾文；齐切瓦文；切瓦文"
+    nym: "尼亚姆韦齐文"
+    nyn: "尼昂科勒文"
+    nyo: "尼约罗文"
+    nzi: "恩济马文"
+    oc: "奥克西唐语"
+    oj: "奥吉布瓦文"
+    om: "奥洛莫文"
+    or: "欧里亚文"
+    os: "奥塞梯文"
+    osa: "奥萨格文"
+    ota: "奥托曼土耳其文"
+    oto: "奥托米语系"
+    pa: "旁遮普文"
+    paa: "其他巴布亚文"
+    pag: "邦阿西楠语"
+    pal: "帕拉维文"
+    pam: "邦板牙文"
+    pap: "帕皮亚门托文"
+    pau: "帕劳文"
+    peo: "古老波斯语"
+    phi: "其他菲律宾语系"
+    phn: "腓尼基文"
+    pi: "巴利文"
+    pl: "波兰文"
+    pon: "波纳佩文"
+    pra: "普拉克里特诸语言"
+    pro: "普罗文斯文"
+    ps: "普什图文"
+    pt: "葡萄牙文"
+    pt_BR: "葡萄牙语（巴西）"
+    pt_PT: "依伯利亚葡萄牙文"
+    qu: "盖丘亚文"
+    raj: "拉贾斯坦文"
+    rap: "拉帕努伊文"
+    rar: "拉罗汤加文"
+    rm: "列托－罗曼文"
+    rn: "基隆迪文"
+    ro: "罗马尼亚文"
+    roa: "其他拉丁语系"
+    rom: "吉普赛文"
+    root: "根语言"
+    ru: "俄文"
+    rup: "亚美尼亚语"
+    rw: "卢旺达文"
+    sa: "梵文"
+    sad: "散达维文"
+    sah: "雅库特文"
+    sai: "其他南美印第安文"
+    sal: "萨利什文"
+    sam: "萨玛利亚文"
+    sas: "萨萨克文"
+    sat: "桑塔利文"
+    sc: "萨丁文"
+    scn: "西西里文"
+    sco: "苏格兰文"
+    sd: "信德文"
+    se: "北萨米文"
+    sel: "塞尔库普文"
+    sem: "其他闪族语系"
+    sg: "桑戈文"
+    sga: "古爱尔兰文"
+    sgn: "手语"
+    sh: "塞尔维亚-克罗地亚文"
+    shn: "掸文"
+    si: "僧伽罗文"
+    sid: "悉达摩文"
+    sio: "苏语诸语言"
+    sit: "其他汉藏语系"
+    sk: "斯洛伐克文"
+    sl: "斯洛文尼亚文"
+    sla: "其他斯拉夫语系"
+    sm: "萨摩亚文"
+    sma: "南萨米文"
+    smi: "其他萨米文"
+    smj: "律勒欧萨莫斯语"
+    smn: "伊纳里萨米语"
+    sms: "斯科特萨米文"
+    sn: "绍纳文"
+    snk: "索尼基文"
+    so: "索马里文"
+    sog: "古粟特语"
+    son: "桑海文"
+    sq: "阿尔巴尼亚文"
+    sr: "塞尔维亚文"
+    srn: "Sranan Tongo（源于克里奥尔语）"
+    srr: "谢列尔文"
+    ss: "斯瓦特文"
+    ssa: "非洲撒哈拉沙漠边缘地带语言"
+    st: "塞索托文"
+    su: "巽他语"
+    suk: "苏库马文"
+    sus: "苏苏文"
+    sux: "苏马文"
+    sv: "瑞典文"
+    sw: "斯瓦希里文"
+    syr: "叙利亚文"
+    ta: "泰米尔文"
+    tai: "傣语诸语言（其他）"
+    te: "泰卢固文"
+    tem: "滕内语"
+    ter: "特列纳文"
+    tet: "特塔姆文"
+    tg: "塔吉克文"
+    th: "泰文"
+    ti: "提格里尼亚文"
+    tig: "提格雷文"
+    tiv: "蒂夫文"
+    tk: "土库曼文"
+    tkl: "托克劳文"
+    tl: "塔加洛语"
+    tlh: "克林贡文"
+    tli: "特林吉特文"
+    tmh: "塔马奇克文"
+    tn: "塞茨瓦纳文"
+    to: "汤加文"
+    tog: "汤加文（尼亚萨地区）"
+    tpi: "托克皮辛文"
+    tr: "土耳其文"
+    ts: "宗加文"
+    tsi: "蒂姆西亚文"
+    tt: "塔塔尔文"
+    tum: "通布卡文"
+    tup: "图皮语系"
+    tut: "阿尔泰诸语言（其他）"
+    tvl: "图瓦卢文"
+    tw: "特威文"
+    ty: "塔西提文"
+    tyv: "图瓦文"
+    udm: "乌德穆尔特文"
+    ug: "维吾尔文"
+    uga: "乌加里特文"
+    uk: "乌克兰文"
+    umb: "翁本杜文"
+    und: "未定语种"
+    ur: "乌尔都文"
+    uz: "乌兹别克文"
+    vai: "瓦伊文"
+    ve: "文达文"
+    vi: "越南文"
+    vo: "沃拉普克文"
+    vot: "沃提克文"
+    wa: "瓦隆文"
+    wak: "瓦卡什诸语言"
+    wal: "瓦拉莫文"
+    war: "瓦赖文"
+    was: "瓦绍文"
+    wen: "索布诸语言"
+    wo: "沃洛夫文"
+    xal: "卡尔梅克文"
+    xh: "科萨文"
+    yao: "瑶族文"
+    yap: "雅浦文"
+    yi: "依地文"
+    yo: "约鲁巴文"
+    ypk: "尤皮克诸语言"
+    za: "壮语"
+    zap: "萨波蒂克文"
+    zen: "泽纳加文"
+    zh: "中文"
+    zh_Hans: "中文（简体）"
+    zh_Hant: "中文（繁体）"
+    znd: "赞德文"
+    zu: "祖鲁文"
+    zun: "祖尼语"
+    zxx: "无语言内容"
+    zza: "扎扎文"
