--- a/rails/locale/uz.yml
+++ b/rails/locale/uz.yml
@@ -1,14 +1,14 @@
 uz:
   languages:
-    ar: "arabcha"
-    de: "olmoncha"
-    en: "inglizcha"
-    es: "ispancha"
-    fr: "fransuzcha"
-    hi: "hindcha"
-    it: "italyancha"
-    ja: "yaponcha"
-    pt: "portugalcha"
-    ru: "ruscha"
-    uz: "o'zbekcha"
-    zh: "xitoycha"
+    ar: "Арабча"
+    de: "Олмонча"
+    en: "Инглизча"
+    es: "Испанча"
+    fr: "Французча"
+    hi: "Ҳиндча"
+    it: "Италянча"
+    ja: "Японча"
+    pt: "Португалча"
+    ru: "Русча"
+    uz: "Ўзбек"
+    zh: "Хитойча"
